#
# Copyright (C) The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

cmake_minimum_required(VERSION 3.4.1)

# build the ndk-helper library
get_filename_component(ndkHelperSrc ../../../../common/ndk_helper ABSOLUTE)
get_filename_component(ndkHelperBin ${ndkHelperSrc}/../ndkHelperBin ABSOLUTE)
add_subdirectory(${ndkHelperSrc} ndkHelperBin)

# now build app's shared lib
add_library(MoreTeapotsNativeActivity
  SHARED
    MoreTeapotsNativeActivity.cpp
    MoreTeapotsRenderer.cpp
)
set_target_properties(MoreTeapotsNativeActivity
  PROPERTIES
    CXX_STANDARD 11
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
)

# Export ANativeActivity_onCreate(),
# Refer to: https://github.com/android-ndk/ndk/issues/381.
set_target_properties(MoreTeapotsNativeActivity
  PROPERTIES  LINK_FLAGS "-u ANativeActivity_onCreate")

# add lib dependencies
target_link_libraries(MoreTeapotsNativeActivity
  PRIVATE
    NdkHelper
)
